Handle empty gateway